# Ektb

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx
app/config/: page.tsx
app/history/: page.tsx
app/modes/: page.tsx
app/overlay/: layout.tsx  page.tsx
app/vocabulary/: page.tsx
components/: LayoutShell.tsx  ShortcutBadge.tsx  Sidebar.tsx  StatsCard.tsx
contexts/: LanguageContext.tsx
hooks/: useTauri.ts
lib/: translations.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  commands.rs  config.rs  groq.rs  inject.rs  lib.rs  test_shortcut.rs
